apps/base/django-crm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-crm
spec:
  selector:
    app: django-crm
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
