apps/base/django-crm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-crm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: immomo.kubetest.uk
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  tls:
    - hosts:
        - immomo.kubetest.uk
      secretName: django-crm-tls
  rules:
    - host: immomo.kubetest.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-crm
                port:
                  number: 8000
